<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".View.ui.home.SignupFragment" >

        <LinearLayout
            android:id="@+id/framelayout_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearlayout_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_login" />

            <EditText
                android:id="@+id/txtin_login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="login" />

            <TextView
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_password" />

            <EditText
                android:id="@+id/txtin_password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="mot de passe" />

            <TextView
                android:id="@+id/txt_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_confirmation" />

            <EditText
                android:id="@+id/txtin_confirmation"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="confirmation mot de passe" />

            <TextView
                android:id="@+id/txt_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_mail" />

            <EditText
                android:id="@+id/txtin_mail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="mail"/>

            <TextView
                android:id="@+id/txt_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_firstname" />
            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtin_firstname"
                android:hint="prénom" />

            <TextView
                android:id="@+id/txt_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_lastname" />

            <EditText
                android:id="@+id/txtin_lastname"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="nom" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearlayout_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/framelayout_signup"
            android:gravity="center"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btn_val_back_to_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_back"
                android:layout_marginRight="10dp"/>

            <Button
                android:id="@+id/btn_send_inscri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send_inscription"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>