<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ui.home.SubscribeFragment" >

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ll_base_style">

        <LinearLayout
            android:id="@+id/ll_challenge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txt_challenge_title"
                style="@style/title_text_style"
                android:text="@string/challenge_title" />

            <TextView
                android:id="@+id/txt_challenge_date"
                style="@style/second_title_text_style"
                android:text="@string/challenge_date" />

            <WebView
                android:id="@+id/wvDescription"
                android:layout_width="match_parent"
                android:backgroundTint="@color/light_background"
                android:layout_height="230dp" />

            <TextView
                android:id="@+id/txt_title_records"
                style="@style/second_title_text_style"
                android:text="@string/records" />

            <LinearLayout
                android:id="@+id/ll_subscribe_records"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="200dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ListView
                    android:id="@+id/lv_subscribe_records"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_challenge_preview"
                    style="@style/submit_subscribe_blue_button"
                    android:text="Prévisualiser" />

                <Button
                    android:id="@+id/btn_challenge_subscribe"
                    style="@style/submit_subscribe_green_button"
                    android:text="S'inscrire" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>